crates/specforge-cli/tests/snapshots/tests__inspect_views__inspect_fx1_ghost.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
expression: "normalized(result, root)"
---
{
  "isError": {
    "code": "entity_not_found",
    "diagnostic": {
      "code": "E003",
      "column": null,
      "file": null,
      "line": null,
      "message": "unresolved entity 'ghost' — not found in graph",
      "severity": "Error",
      "span": null,
      "suggestion": null,
      "title": "Unresolved reference"
    },
    "entity_id": "ghost",
    "message": "unresolved entity 'ghost' — not found in graph",
    "tool": "specforge.inspect"
  }
}
