crates/specforge-cli/tests/snapshots/tests__inspect_views__inspect_fx1_login.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
expression: "normalized(result, root)"
---
{
  "contract": "The system MUST let a known user log in",
  "coverage_status": "covered",
  "declared": true,
  "diagnostics": [
    {
      "code": "W006",
      "column": 1,
      "file": "main.spec",
      "line": 1,
      "message": "behavior 'login' has no category — agents use category for task routing",
      "origin": "@specforge/software",
      "severity": "Warning",
      "span": {
        "end_col": 2,
        "end_line": 5,
        "file": "main.spec",
        "start_col": 1,
        "start_line": 1
      },
      "suggestion": null,
      "title": "Behavior missing category"
    }
  ],
  "entity_id": "login",
  "exempt": false,
  "fields": {
    "contract": "The system MUST let a known user log in",
    "features": [
      "signin"
    ],
    "verify": [
      {
        "description": "a known user logs in",
        "kind": "unit"
      }
    ]
  },
  "kind": "behavior",
  "obligated": true,
  "referenced_by": [],
  "refers_to": [
    "signin"
  ],
  "source_extension": "@specforge/software",
  "source_span": {
    "end_col": 2,
    "end_line": 5,
    "file": "main.spec",
    "start_col": 1,
    "start_line": 1
  },
  "testable": true,
  "title": "Log in",
  "verify_declarations": [
    "unit a known user logs in"
  ]
}
