crates/specforge-cli/tests/snapshots/tests__inspect_views__inspect_fx1_logout.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
expression: "normalized(result, root)"
---
{
  "contract": "The system MUST end the session on logout",
  "coverage_status": "uncovered",
  "declared": false,
  "diagnostics": [
    {
      "code": "W001",
      "message": "behavior 'logout' does not implement any feature",
      "severity": "Warning",
      "suggestion": null
    },
    {
      "code": "W004",
      "message": "behavior 'logout' is testable but declares no verify obligations",
      "severity": "Warning",
      "suggestion": null
    },
    {
      "code": "W006",
      "message": "behavior 'logout' has no category — agents use category for task routing",
      "severity": "Warning",
      "suggestion": null
    }
  ],
  "entity_id": "logout",
  "exempt": false,
  "fields": {
    "contract": "The system MUST end the session on logout"
  },
  "kind": "behavior",
  "obligated": true,
  "reference_count": 0,
  "referenced_by": [],
  "references": [],
  "refers_to": [],
  "source_extension": "@specforge/software",
  "source_span": {
    "end_col": 2,
    "end_line": 9,
    "file": "main.spec",
    "start_col": 1,
    "start_line": 7
  },
  "testable": true,
  "title": "Log out",
  "verify_declarations": null
}
