crates/specforge-cli/tests/snapshots/tests__inspect_views__inspect_fx1_no_lost_login.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
assertion_line: 104
expression: "normalized(result, root)"
---
{
  "contract": null,
  "coverage_status": "uncovered",
  "declared": true,
  "diagnostics": [
    {
      "code": "W123",
      "message": "property 'no_lost_login' is not referenced by any behavior — it may be unused",
      "severity": "Warning",
      "suggestion": null
    }
  ],
  "entity_id": "no_lost_login",
  "fields": {
    "expression": "once logged in, a session stays until logout",
    "property_type": "safety",
    "verify": [
      {
        "description": "no login is lost",
        "kind": "unit"
      }
    ]
  },
  "kind": "property",
  "reference_count": 0,
  "referenced_by": [],
  "references": [],
  "refers_to": [],
  "source_span": {
    "end_col": 2,
    "end_line": 32,
    "file": "main.spec",
    "start_col": 1,
    "start_line": 28
  },
  "testable": false,
  "title": "A login is never lost",
  "verify_declarations": [
    "unit no login is lost"
  ]
}
