crates/specforge-cli/tests/snapshots/tests__inspect_views__inspect_fx1_signin.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
expression: "normalized(result, root)"
---
{
  "coverage_status": "uncovered",
  "declared": false,
  "diagnostics": [
    {
      "code": "I048",
      "message": "feature 'signin' has no acceptance criteria",
      "severity": "Info",
      "suggestion": null
    },
    {
      "code": "I080",
      "message": "feature 'signin' has no owner",
      "severity": "Info",
      "suggestion": null
    },
    {
      "code": "I081",
      "message": "feature 'signin' has no effort estimate",
      "severity": "Info",
      "suggestion": null
    }
  ],
  "entity_id": "signin",
  "exempt": false,
  "fields": {
    "problem": "Users cannot reach their data",
    "solution": "Let them log in"
  },
  "kind": "feature",
  "obligated": false,
  "reference_count": 1,
  "referenced_by": [
    "login"
  ],
  "references": [
    "login"
  ],
  "refers_to": [],
  "source_extension": "@specforge/product",
  "source_span": {
    "end_col": 2,
    "end_line": 26,
    "file": "main.spec",
    "start_col": 1,
    "start_line": 23
  },
  "testable": false,
  "title": "Sign in"
}
